# pico-i2s-mic

./: CMakeLists.txt  LICENSE  README.md  main.c  mic_i2s.c  mic_i2s.h  mic_i2s.pio
